WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
294718
REGRESSION(
295435@main
): WPE Platform: crash under Wayland with software rasterization
https://bugs.webkit.org/show_bug.cgi?id=294718
Summary
REGRESSION(295435@main): WPE Platform: crash under Wayland with software rast...
Carlos Garcia Campos
Reported
2025-06-19 02:44:10 PDT
In
295435@main
we changed the way we release the WPEBuffer on wayland buffer listener assuming the WPEBuffer is always a DMABuf.
Attachments
Add attachment
proposed patch, testcase, etc.
Carlos Garcia Campos
Comment 1
2025-06-19 02:46:44 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/46952
EWS
Comment 2
2025-06-19 03:25:49 PDT
Committed
296416@main
(f528ed283464): <
https://commits.webkit.org/296416@main
> Reviewed commits have been landed. Closing PR #46952 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug