REGRESSION(295435@main): WPE Platform: crash under Wayland with software rasterization https://bugs.webkit.org/show_bug.cgi?id=294718

Reviewed by Nikolas Zimmermann.

In 295435@main we changed the way we release the WPEBuffer on wayland
buffer listener assuming the WPEBuffer is always a DMABuf. We need to do
the same changes for shared memory buffers.

* Source/WebKit/WPEPlatform/wpe/wayland/WPEViewWayland.cpp:
(SharedMemoryBuffer::SharedMemoryBuffer):
(SharedMemoryBuffer::~SharedMemoryBuffer):
(sharedMemoryBufferDestroy):
(sharedMemoryBufferCreate):
(createWaylandBufferSHM):
(wpeViewWaylandSetCursorFromBytes):

Canonical link: https://commits.webkit.org/296416@main